--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="canvas-wrapper"></div>
+
+    <pre id="log"></pre>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
