--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   >
     <div id="main-frame-error" class="interstitial-wrapper" jstcache="0">
       <div id="main-content" jstcache="0">
-
         <div id="canvas-wrapper"></div>
         <pre id="log"></pre>
 
@@ -26,9 +25,6 @@
             >
             <a id="error-information-button" class="hidden"></a>
           </h1>
-          <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1">
-            No internet
-          </p>
           <!--The suggestion list and error code are normally presented inline,
                 in which case error-information-popup-* divs have no effect. When
                 error-information-popup-container has the use-popup-container class, this
@@ -121,7 +117,16 @@
           </div>
         </div>
       </div>
+
       <script type="module" src="/src/main.ts"></script>
     </div>
+
+    <!-- <div class="popup">
+      <div class="popup__title-bar">
+        <div class="popup__title">Problem</div>
+        <div class="popup__close"></div>
+      </div>
+      <div class="popup__contents">⚠️<br />No network</div>
+    </div> -->
   </body>
 </html>
