--- a/index.html
+++ b/index.html
@@ -46,8 +46,17 @@
                       Try:
                     </p>
                     <ul class="">
-                      <li>Checking the network cables, modem, and router</li>
-                      <li>Reconnecting to Wi-Fi</li>
+                      <li>
+                        Checking the
+                        <span class="objective objective-1">network cables</span
+                        >, <span class="objective objective-2">modem</span>, and
+                        <span class="objective objective-3">router</span>
+                      </li>
+                      <li>
+                        <span class="objective objective-4"
+                          >Reconnecting to Wi-Fi</span
+                        >
+                      </li>
                     </ul>
                   </div>
                   <div class="error-code" jscontent="errorCode" jstcache="17">
