finish objective entity

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <ul class="">
                       <li>
                         Checking the
-                        <span class="objective objective-1">network cables</span
+                        <span class="objective objective-eth-cable">network cables</span
                         >, <span class="objective objective-2">modem</span>, and
                         <span class="objective objective-3">router</span>
                       </li>
