feat: add reconnecting message

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div id="main-message" jstcache="0">
           <h1 jstcache="0">
-            <span jsselect="heading" jsvalues=".innerHTML:msg" jstcache="9"
+            <span jsselect="heading" id="no-internet-message" jsvalues=".innerHTML:msg" jstcache="9"
               >No internet</span
             >
             <a id="error-information-button" class="hidden"></a>
