add other objects

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                       <li>
                         Checking the
                         <span class="objective objective-eth-cable">network cables</span
-                        >, <span class="objective objective-2">modem</span>, and
-                        <span class="objective objective-3">router</span>
+                        >, <span class="objective objective-modem">modem</span>, and
+                        <span class="objective objective-router">router</span>
                       </li>
                       <li>
-                        <span class="objective objective-4"
+                        <span class="objective objective-reconnect"
                           >Reconnecting to Wi-Fi</span
                         >
                       </li>
